--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -52,9 +52,10 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a href="https://wa.me/+258123" class="float-whatsap" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+ <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+        <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        <span>Fale Conosco!<span>
+      </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -115,9 +116,8 @@
                                     <div class="section-title">
                                         <h2 class="mb-4 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <span class="mb-4 mt-4"><b>O leite materno é o melhor alimento para o seu
-                                                bebé!</b></span>
-                                        <br>
+                                        <h5 class="mb-0 mt-4 h4"><b>O leite materno é o melhor alimento para o seu
+                                                bebé!</b></h5>
                                         <p class="mb-4">A amamentação é um ato natural. A grande maioria das mulheres
                                             nasce com a
                                             capacidade física de amamentar, o que não
