--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -52,9 +52,10 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a href="https://wa.me/+258123" class="float-whatsap" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+ <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+        <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        <span>Fale Conosco!<span>
+      </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -113,16 +114,28 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="mb-4 subtitle fw-bolder">Pediatria
+                                        <h2 class="mb-4 subtitle fw-bolder">Nutrição
                                         </h2>
-                                        <span class="mb-4 mt-4"><b>Uma Pediatra não é uma médica como as outras, é
-                                                alguém que acompanha toda a família!</b></span>
-                                        <br>
-                                        <p class="mb-4">O acompanhamento da saúde desde o nascimento até à idade adulta
-                                            de pessoas é um privilégio reservado aos Pediatras. As
-                                            consultas de Pediatria permitem avaliar desenvolvimento físico, social e
-                                            emocional do seu filhote. </p>
+                                        <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que fica para a vida!</b></h5>
+                                        <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o nascimento através de hábitos salutares.
+                                            Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e saudável. 
+                                             </p>
 
+                                             <div class="section-title pt-4">
+                                                <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                                <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                            </div>
+                                            <ul class="list">
+                                                <li><a><span class="underline"><b>1-Anamnese e Avaliação clínica</b></span>: Registo do historial clínico familiar e do paciente, bem como o seu estilo de vida.
+                                                        praticado.</a></li>
+                                                        <li><a><span class="underline"><b>2-Avaliação bioquímica</b></span>: Registo e avaliação de exames laboratoriais.</a></li>
+                                                        <li><a><span class="underline"><b>3-Antropometria</b></span>: Registo de peso, altura, circunferências, dobras e composição corporal por biometria.</a></li>
+                                                        <li><a><span class="underline"><b>4-Avaliação dietética</b></span>:  Registo da rotina alimentar.</a></li>
+                                                        <li><a><span class="underline"><b>5-Observações, diagnóstico e aconselhamento</b></span>:   Análise do quadro geral do paciente, determinar objetivos, explicação de conceitos de nutrição e apresentação dos métodos e rotinas a implementar.</a></li>
+                                                        <li><a><span class="underline"><b>6-Pós consulta</b></span>:  Elaboração do plano alimentar baseado nas necessidades energéticas e nutricionais do paciente.
+                                                            Debater limitações apresentadas pelo paciente na implementação do plano na sua rotina e considerar os ajustes necessário para atingir os objetivos com sucesso.
+                                                            </a></li>
+                                            </ul>
                                     </div>
                                 </div>
                             </div>
@@ -133,32 +146,6 @@
             </div>
     </section>
     <!-- Blog Details Section End -->
-
-    <section class="services">
-        <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-12">
-                    <div class="ml-4 mr-4">
-                        <div class="blog__details__text__item">
-                            <!-- Título da Seção -->
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="section-title text-center">
-                                        <button id="ABtn">a) Consulta de Nutrição Geral</button>
-                                        <button id="BBtn">b) Consulta de Nutrição Infantil</button>
-                                        <button id="CBtn">c) Consulta de Diabetes Gestacional</button>
-                                        <button id="DBtn">d) Consulta de Pré-conceção</button>
-                                        <button id="EBtn">e) Consulta de Pré-natal</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="services  set-bg">
         <div class="container">
@@ -181,7 +168,7 @@
                 </div>
             </div>
             <div class="d-flex">
-                <div id="A" class="col-lg-11 col-md-11">
+                <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -235,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="B" class="col-lg-11 col-md-11" style="display: none;">
+                <div id="B" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -303,7 +290,7 @@
                     </div>
                 </div>
 
-                <div id="C" class="col-lg-11 col-md-11" style="display: none;">
+                <div id="C" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -341,7 +328,7 @@
                     </div>
                 </div>
 
-                <div id="D" class="col-lg-11 col-md-11" style="display: none;">
+                <div id="D" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -401,7 +388,7 @@
                     </div>
                 </div>
 
-                <div id="E" class="col-lg-11 col-md-11" style="display: none;">
+                <div id="E" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -446,6 +433,28 @@
                                 </p>
                             </div>
                             <a href="#" class="primary-btn">Marcar Consulta </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="row">
+                        <div class="card w-100 shadow">
+                            <div class="card-more">
+                            <div class="img" id="img" style="height: 230px;background-repeat: no-repeat;background-size: cover;background-position: top center;">
+                            </div>
+                                <hr>
+                                <div class="d-flex">
+                                    <div class="col-lg-12 col-md-12 ">
+                                        <div class="card-text">
+                                        <button id="ABtn">a) Consulta de Nutrição Geral</button>
+                                        <button id="BBtn">b) Consulta de Nutrição Infantil</button>
+                                        <button id="CBtn">c) Consulta de Diabetes Gestacional</button>
+                                        <button id="DBtn">d) Consulta de Pré-conceção</button>
+                                        <button id="EBtn">e) Consulta de Pré-natal</button> 
+                                     </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -572,6 +581,7 @@
         const EBtn = document.getElementById('EBtn');
         const EDiv = document.getElementById('E');
         const title = document.getElementById('title');
+        const img = document.getElementById('img');
 
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showA() {
@@ -581,6 +591,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "a) Consulta de Nutrição Geral"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/blog-6.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
@@ -611,6 +622,7 @@
             DDiv.style.display = 'none';  // Esconde a div Cirurgia
             EDiv.style.display = 'none';  // Esconde a div Cirurgia
             title.textContent = "c) Consulta de Diabetes Gestacional"; // Atualiza o texto para "Pós-parto"
+            img.style.backgroundImage = "url('../img/gallery/gallery-2.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.add("active");
