--- a/pages/header.html
+++ b/pages/header.html
@@ -1,21 +1,24 @@
-<div class="header__top">
+<div class="header__top" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <ul class="header__top__left">
-                    <li><a href="../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a>
+                    <li><a href="#" class="text-white"><img src="../img/icons/contacto.png" class="fa mr-3" width="16"
+                                height="16" alt=""> +258 84 869 7194</a></li>
+                    <li><img src="../img/icons/home.png" class="fa mr-3" width="16" height="16" alt=""> Edifício ou
+                        Shopping 24, Avenida 24 de Julho, Loja 20
                     </li>
-                    <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                    </li>
-                    <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
+                    <li><img src="../img/icons/horario.png" class="fa mr-3" width="16" height="16" alt=""> Seg a Sex
+                        8:00
+                        às 18:00</li>
                 </ul>
             </div>
             <div class="col-lg-4">
                 <div class="header__top__right">
-                    <a href="../#"><i class="fa fa-facebook"></i></a>
-                    <a href="../#"><i class="fa fa-twitter"></i></a>
-                    <a href="../#"><i class="fa fa-instagram"></i></a>
-                    <a href="../#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
@@ -54,36 +57,36 @@
                                         <span>Amamentação</span>
                                         <ul class="dropdown-sec">
 
-                                            <li><a href="pages/amament-pre-parto.html#pre">Consulta
+                                            <li><a href="amament-pre-parto.html#pre">Consulta
                                                     Pré-parto</a></li>
-                                            <li><a href="pages/amament-pre-parto.html#pos">Consulta
+                                            <li><a href="amament-pre-parto.html#pos">Consulta
                                                     Pós-parto</a></li>
 
                                         </ul>
                                         <br>
                                         <span class="pt-4">Medicina do Viajante</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Consulta</a></li>
+                                            <li><a href="viajante.html">Consulta</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <span>Cirurgia</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pages/cirurgia.html#A">Consulta de Cirurgia</a>
+                                            <li><a href="cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
                                             </li>
-                                            <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
-                                            <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                            <li><a href="cirurgia.html#anel">Circuncisão com anel</a></li>
+                                            <li><a href="cirurgia.html#sutura">Sutura de feridas
                                                     superficiais</a></li>
                                         </ul>
                                         <br>
                                         <span>Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
+                                            <li><a href="enfermagem.html#domicilio">Apoio domiciliário no
                                                     pós-parto</a></li>
-                                            <li><a href="pages/enfermagem.html#conseferm">Consulta de
+                                            <li><a href="enfermagem.html#conseferm">Consulta de
                                                     enfermagem</a></li>
-                                            <li><a href="pages/enfermagem.html#pensos">Pensos</a></li>
+                                            <li><a href="enfermagem.html#pensos">Pensos</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -113,6 +116,7 @@
                                             <li><a href="terapia.html#B">Neurológica</a></li>
                                             <li><a href="terapia.html#C">Saúde Mental</a></li>
                                             <li><a href="terapia.html#D">Snoezelen</a></li>
+                                            <li><a href="terapia.html#D">Snoezelen no Pós-Parto</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -157,7 +161,7 @@
                                     <li>
                                         <span>Preparação para a Amamentação</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso Normal em grupo</a></li>
+                                            <li><a href="#">Curso em grupo</a></li>
                                             <li><a href="#">Curso Individual</a></li>
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
@@ -174,7 +178,7 @@
                                     <li>
                                         <span>Preparação para o parto</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso Normal em grupo</a></li>
+                                            <li><a href="#">Curso em grupo</a></li>
                                             <li><a href="#">Curso Individual</a></li>
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
@@ -195,7 +199,6 @@
                                 <li><a href="#">Amamentação</a></li>
                                 <li><a href="#">Enfermagem</a></li>
                                 <li><a href="#">Teste do pezinho</a></li>
-                                <li><a href="#">Pacotes</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
                         <li><a class="arrow" href="../additional-services.html">Workshops<span
@@ -212,9 +215,9 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                            right: 0;
-                                            position: absolute; margin-top: 0.4rem;
-                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                right: 0;
+                                                position: absolute; margin-top: 0.4rem;
+                                            "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
