--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -52,10 +52,11 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
- <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank"
+        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale Conosco!<span>
-      </a>
+    </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -116,26 +117,42 @@
                                     <div class="section-title">
                                         <h2 class="mb-4 subtitle fw-bolder">Nutrição
                                         </h2>
-                                        <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que fica para a vida!</b></h5>
-                                        <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o nascimento através de hábitos salutares.
-                                            Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e saudável. 
-                                             </p>
+                                        <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que
+                                                fica para a vida!</b></h5>
+                                        <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
+                                            nascimento através de hábitos salutares.
+                                            Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e
+                                            saudável.
+                                        </p>
 
-                                             <div class="section-title pt-4">
-                                                <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
-                                                <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
-                                            </div>
-                                            <ul class="list">
-                                                <li><a><span class="underline"><b>1-Anamnese e Avaliação clínica</b></span>: Registo do historial clínico familiar e do paciente, bem como o seu estilo de vida.
-                                                        praticado.</a></li>
-                                                        <li><a><span class="underline"><b>2-Avaliação bioquímica</b></span>: Registo e avaliação de exames laboratoriais.</a></li>
-                                                        <li><a><span class="underline"><b>3-Antropometria</b></span>: Registo de peso, altura, circunferências, dobras e composição corporal por biometria.</a></li>
-                                                        <li><a><span class="underline"><b>4-Avaliação dietética</b></span>:  Registo da rotina alimentar.</a></li>
-                                                        <li><a><span class="underline"><b>5-Observações, diagnóstico e aconselhamento</b></span>:   Análise do quadro geral do paciente, determinar objetivos, explicação de conceitos de nutrição e apresentação dos métodos e rotinas a implementar.</a></li>
-                                                        <li><a><span class="underline"><b>6-Pós consulta</b></span>:  Elaboração do plano alimentar baseado nas necessidades energéticas e nutricionais do paciente.
-                                                            Debater limitações apresentadas pelo paciente na implementação do plano na sua rotina e considerar os ajustes necessário para atingir os objetivos com sucesso.
-                                                            </a></li>
-                                            </ul>
+                                        <div class="section-title pt-4">
+                                            <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                        </div>
+                                        <ul class="list">
+                                            <li><a><span class="underline"><b>1-Anamnese e Avaliação clínica</b></span>:
+                                                    Registo do historial clínico familiar e do paciente, bem como o seu
+                                                    estilo de vida.
+                                                    praticado.</a></li>
+                                            <li><a><span class="underline"><b>2-Avaliação bioquímica</b></span>: Registo
+                                                    e avaliação de exames laboratoriais.</a></li>
+                                            <li><a><span class="underline"><b>3-Antropometria</b></span>: Registo de
+                                                    peso, altura, circunferências, dobras e composição corporal por
+                                                    biometria.</a></li>
+                                            <li><a><span class="underline"><b>4-Avaliação dietética</b></span>: Registo
+                                                    da rotina alimentar.</a></li>
+                                            <li><a><span class="underline"><b>5-Observações, diagnóstico e
+                                                            aconselhamento</b></span>: Análise do quadro geral do
+                                                    paciente, determinar objetivos, explicação de conceitos de nutrição
+                                                    e apresentação dos métodos e rotinas a implementar.</a></li>
+                                            <li><a><span class="underline"><b>6-Pós consulta</b></span>: Elaboração do
+                                                    plano alimentar baseado nas necessidades energéticas e nutricionais
+                                                    do paciente.
+                                                    Debater limitações apresentadas pelo paciente na implementação do
+                                                    plano na sua rotina e considerar os ajustes necessário para atingir
+                                                    os objetivos com sucesso.
+                                                </a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -440,18 +457,19 @@
                     <div class="row">
                         <div class="card w-100 shadow">
                             <div class="card-more">
-                            <div class="img" id="img" style="height: 230px;background-repeat: no-repeat;background-size: cover;background-position: top center;">
-                            </div>
+                                <div class="img" id="img"
+                                    style="height: 230px;background-repeat: no-repeat;background-size: cover;background-position: top center;">
+                                </div>
                                 <hr>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
                                         <div class="card-text">
-                                        <button id="ABtn">a) Consulta de Nutrição Geral</button>
-                                        <button id="BBtn">b) Consulta de Nutrição Infantil</button>
-                                        <button id="CBtn">c) Consulta de Diabetes Gestacional</button>
-                                        <button id="DBtn">d) Consulta de Pré-conceção</button>
-                                        <button id="EBtn">e) Consulta de Pré-natal</button> 
-                                     </div>
+                                            <button id="ABtn">a) Consulta de Nutrição Geral</button>
+                                            <button id="BBtn">b) Consulta de Nutrição Infantil</button>
+                                            <button id="CBtn">c) Consulta de Diabetes Gestacional</button>
+                                            <button id="DBtn">d) Consulta de Pré-conceção</button>
+                                            <button id="EBtn">e) Consulta de Pré-natal</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -466,104 +484,9 @@
 
 
     <!-- Seção de Rodapé Início -->
-    <footer class="footer  mt-8">
-        <div class="footer__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <div class="footer__logo">
-                            <a href="../#"><img src="../img/footer-logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-8">
-                        <div class="footer__newslatter">
-                            <form action="#">
-                                <!-- <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button> -->
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="footer__social">
-                            <a href="../#"><i class="fa fa-facebook"></i></a>
-                            <a href="../#"><i class="fa fa-twitter"></i></a>
-                            <a href="../#"><i class="fa fa-instagram"></i></a>
-                            <a href="../#"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>A Clinica</h5>
-                        <ul>
-                            <li><a href="../#">Sobre Nós</a></li>
-                            <li><a href="../#">Equipa</a></li>
-                            <li><a href="../#">O Nosso Trabalho Humanitário</a></li>
-                            <li><a href="../#">Agenda</a></li>
-                            <li><a href="../#">Cursos</a></li>
+    <footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.jpg");'>
+        <div id="footer">
 
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>Links Rápidos</h5>
-                        <ul>
-                            <li><a href="../#">Área Reservada</a></li>
-                            <li><a href="../#">Consultas</a></li>
-                            <li><a href="../#">Vacinaçao</a></li>
-                            <li><a href="../#">Gravidez</a></li>
-                            <li><a href="../#">Apoio ao domicílio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__address">
-                        <h5>Entre em Contato</h5>
-                        <ul>
-                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                            </li>
-                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
-                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-6">
-                    <div class="footer__map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.2284001393815!2d32.5737!3d-25.9692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ee81c160c60b5c5%3A0xab3b2266c8984b5f!2sMaputo%2C%20Mo%C3%A7ambique!5e0!3m2!1spt-BR!2s!4v1692288246392!5m2!1spt-BR!2s"
-                            width="100%" height="190" style="border:0" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-        <div class="footer__copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="footer__copyright__text">
-                            <p>Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul>
-                            <li>Todos os Direitos Reservados</li>
-                            <li>Termos & Uso</li>
-                            <li>Política de Privacidade</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
