--- a/pages/header.html
+++ b/pages/header.html
@@ -1,4 +1,4 @@
-<div class="header__top" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+<div class="header__top" style='background-image: url("../img/blog/details/blog-hero11.jpg");'>
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
