--- a/team.html
+++ b/team.html
@@ -191,66 +191,61 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center mt-8">
                 <div class="team-area sp">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#A">
+                                 <a href="pages/team-sing.html#A">
                                         <div class="team-img">
                                             <img src="img/team/team 4.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content">
                                             <h4 class="mb-2">Calisto Chemane</h4>
                                             <p>Atendimento ao Paciente</p>
-                                            <div class="team-social mt-3">
-                                                <a href="#" class="fa fa-envelope"></a>
-                                            </div>
                                         </div>
+                               </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                     <a href="pages/team-sing.html#B">
+                                    <div class="team-img">
+                                        <img src="img/team/team-6.jpg" alt="Member Photo">
+                                    </div>
+                                    <div class="team-content">
+                                        <h4 class="mb-2">Dra Erika Pereira</h4>
+                                        <p>Nutricionista</p>
+                                    </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <div class="team-img">
-                                        <img src="img/team/team-6.jpg" alt="Member Photo">
-                                    </div>
-                                    <div class="team-content">
-                                        <h4 class="mb-2">Marcos Aurelio</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
-                                        <div class="team-social mt-3">
-                                            <a href="#" class="fa fa-envelope"></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
-                                <div class="inner">
+                                      <a href="pages/team-sing.html#C">
                                     <div class="team-img">
                                         <img src="img/team/team-5.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Joana Maria</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
-                                        <div class="team-social mt-3">
-                                            <a href="#" class="fa fa-envelope"></a>
-                                        </div>
+                                        <h4 class="mb-2">Dra Inês Claudino</h4>
+                                        <p>Pediatra</p>
                                     </div>
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
+                                     <a href="pages/team-sing.html#D">
                                     <div class="team-img">
                                         <img src="img/team/team-7.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Maria Joana</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
-                                        <div class="team-social mt-3">
-                                            <a href="#" class="fa fa-envelope"></a>
-                                        </div>
+                                        <h4 class="mb-2">Patricia Pérez Ronquillo</h4>
+                                        <p>Médica Geral </p>
+
                                     </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
