--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -102,22 +102,21 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-6">
         <div class="container mt-9">
-            <div class="row card-container"
-                style="background-image: url('../img/bg3.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
+            <div class="row card-container" style="background-image: url('../img/bg3.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
                 <!-- Seção de Texto -->
                 <div class="col-lg-6 col-md-6 col-12 text-section d-flex flex-column justify-content-center">
-                    <div class="text-container m-2">
-                        <div class="d-flex align-items-end">
+                    <div class=" m-2">
+                        <div class="d-flex align-items-end " >
                             <div id="icone"></div>
-                            <h3 class="text-white" id="funcao"><img alt="icon"></h3>
+                            <h2 class="text-white ml-2" id="funcao"><img alt="icon"></h2>
                         </div>
-                        <h1 class="name" id="nome"></h1>
-                        <p class="description text-white" id="tempo"></p>
+                        <b><h1 class="name" id="nome"></h1></b>
+                        <p class="description text-white h4" id="tempo"></p>
                     </div>
                 </div>
                 <!-- Seção de Imagem -->
-                <div class="col-lg-6 col-md-6 col-12 image-section p-0">
-                    <img src="../img/team/team 4.jpg" alt="Ana Castro Santos" alt="Ana Castro Santos">
+                <div class="col-lg-6 col-md-6 col-12 image-section p-0" id="profile">
+                    
                 </div>
             </div>
             <div class="row d-flex justify-content-center mt-4">
@@ -133,9 +132,7 @@
                                         <br>
                                         <p class="mb-4" id="paragrafo">
                                         </p>
-                                        <h5 class="mb-4 mt-4 h4 text-center"><b><i>N’A Clínica</i> quero que te sintas
-                                                em sempre casa,
-                                                acolhido e cuidado como parte da nossa família!</b></h5>
+                                        <h5 class="mb-4 mt-4 h4 text-center" id="frase"></h5>
                                     </div>
                                 </div>
                             </div>
@@ -150,59 +147,62 @@
                             <div class="col-lg-12">
                                 <div class="section-title d-flex justify-content-between">
                                     <h4 class="">Conheça outros especialistas da nossa equipa </h4>
-                                    <a href="#" class="primary-btn-hover normal-btn">Ver todos</a>
+                                    <a href="../team.html" class="primary-btn-hover normal-btn">Ver todos</a>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="../pages/team-sing.html">
+                                 <button class="teambtn" id="ABtn">
                                         <div class="team-img">
                                             <img src="../img/team/team 4.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content">
                                             <h4 class="mb-2">Calisto Chemane</h4>
                                             <p>Atendimento ao Paciente</p>
-                                            <div class="team-social mt-3">
-                                                <a href="#" class="fa fa-envelope"></a>
-                                            </div>
                                         </div>
-                                    </a>
+                                </button>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
+                                     <button class="teambtn" id="BBtn">
                                     <div class="team-img">
                                         <img src="../img/team/team-6.jpg" alt="Member Photo">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Marcos Aurelio</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
+                                        <h4 class="mb-2">Dra Erika Pereira</h4>
+                                        <p>Nutricionista</p>
                                     </div>
+                                     </button>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
+                                     <button class="teambtn" id="CBtn">
                                     <div class="team-img">
                                         <img src="../img/team/team-5.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Joana Maria</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
+                                        <h4 class="mb-2">Dra Inês Claudino</h4>
+                                        <p>Pediatra</p>
                                     </div>
+                                     </button>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
+                                     <button class="teambtn" id="DBtn">
                                     <div class="team-img">
                                         <img src="../img/team/team-7.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Maria Joana</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
+                                        <h4 class="mb-2">Patricia Pérez Ronquillo</h4>
+                                        <p>Médica Geral </p>
 
                                     </div>
+                                     </button>
                                 </div>
                             </div>
                         </div>
@@ -227,11 +227,14 @@
     <!-- Seção de Rodapé Fim -->
 
     <script>
+        const ABtn = document.getElementById('ABtn');
         const nome = document.getElementById('nome');
         const icone = document.getElementById('icone');
         const tempo = document.getElementById('tempo');
         const funcao = document.getElementById('funcao');
         const paragrafo = document.getElementById('paragrafo');
+        const frase = document.getElementById('frase');
+        const profile = document.getElementById('profile');
 
 
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
@@ -241,8 +244,40 @@
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             funcao.textContent = "Atendimento ao Paciente."; // Atualiza o texto
             paragrafo.innerHTML = "Estudante universitário no curso de Ciências de Informação Geográfica na Universidade Eduardo Mondlane em Maputo, Moçambique e formado em Atendimento ao Cliente pela Academia Negócios de Saúde, Portugal. <br><br> Com mais de 2 anos de experiência de atendimento ao paciente, orgulho-me de ter desenvolvido uma abordagem marcada pela simpatia, empatia, paciência e compreensão. Descobri uma verdadeira paixão por esta área de trabalho, transformando cada interação numa oportunidade de oferecer o meu melhor e criar conexões leais e genuínas, colocando sempre as necessidades dos pacientes em primeiro lugar.";
+            frase.innerHTML = "<b><i>N’A Clínica</i> quero que te sintas em sempre casa, acolhido e cuidado como parte da nossa família!</b>";
+            profile.innerHTML = "<img src='../img/team/team 4.jpg' alt='Ana Castro Santos' alt='Ana Castro Santos'>";
         }
 
+           // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
+           function showB() {
+            nome.textContent = "Dra Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
+            icone.style.backgroundImage = "url('../img/icons/Nutricionista.png')";
+            tempo.textContent = "Connosco a ajudar famílias desde 2018."; // Atualiza o texto
+            funcao.textContent = "Especialista Nutricionista "; // Atualiza o texto
+            paragrafo.innerHTML = "Nutricionista clínica com mais de 10 anos de experiência a fazer atendimento presencial e online. Mestre em Ciências da Nutrição pela Universidade de Chester no Reino Unido, tem vindo a acrescentar ao seu currículo formações mais específicas na área da Nutrição. </br></br> Foi na sua jornada de maternidade que experienciou a introdução alimentar e que ganhou uma nova perspetiva sobre a vida no geral e sobre a educação alimentar em particular. </br></br>  Ensina os seus pacientes a alimentarem-se adequadamente e de forma personalizada para que implementem as recomendações com motivação, foco e consistência de modo a superarem todos os desafios que estes processos implicam e a alcançarem os resultados pretendidos.";
+            frase.innerHTML = "<b>«A saúde é o melhor que a Nutrição tem para te oferecer!»</b>";
+            profile.innerHTML = "<img src='../img/team/team-6.jpg' alt='Ana Castro Santos' alt='Ana Castro Santos'>";
+        }
+          // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
+          function showC() {
+            nome.textContent = "Dra Inês Claudino"; // Atualiza o texto para "Calisto Chemane"
+            icone.style.backgroundImage = "url('../img/icons/pediatra .png')";
+            tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
+            paragrafo.innerHTML = "Mãe de uma menina fantástica e Pediatra com mais de 10 anos de experiência. Autora da página de Instagram sobre Pediatria e Parentalidade «Dona Bebé». </br></br> Licenciada em Medicina pela Universidade de Navarra em Espanha. Especialista em Pediatria e sub-especialista em Doenças Infetocontagiosas Pediátricas pelo Hospital La Paz em Madrid, Espanha. Estágio Imunoinfecciologia no Great Ormond Street Hospital for Children em Londres, Reino Unido. Estágio de Infecciologia Tropical no Hospital Central de Maputo. Especialista Universitária em Amamentação Materna pela Universidade Francisco de Vitoria em Madrid, Espanha. Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Descobri a minha paixão profissional na atenção primária em Pediatria, onde posso acompanhar as crianças (e as suas famílias) desde a maternidade até à idade adulta. O aleitamento materno foi um dos temas que mais aprofundei nos últimos anos, segura de poder fazer a diferença numa área tão pouco trabalhada em Moçambique.";
+            funcao.textContent = "Pediatra ";
+            frase.innerHTML = "<b>«És SEMPRE a melhor MÃE do mundo para o teu bebé!»</b>";
+            profile.innerHTML = "<img src='../img/team/team-5.jpg' alt='Ana Castro Santos' alt='Ana Castro Santos'>";
+        }
+               // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
+               function showD() {
+            nome.textContent = "Dra Patricia Pérez Ronquillo"; // Atualiza o texto para "Calisto Chemane"
+            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
+            paragrafo.innerHTML = "Médica Geral e a sua nova conselheira. Licenciada em Medicina na Universidade Carlos Juan Finlay em Cuba com menção de honra. Especialista Universitária em Pediatria, Diploma Universitário em Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil e a realizar um Mestrado em Neonatologia pela Universidade Tecnológica Cardenal Herrera em Espanha.  Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Toda a minha vida sonhei trabalhar com crianças e, agora que sou mãe de uma menina ainda dou mais valor à Pediatria e ao trabalho desenvolvido com as famílias. Descobri, também, a paixão pela amamentação materna, tema muito interessante do ponto de vista clínico e social.";
+            funcao.textContent = "Médica Geral  ";
+            frase.innerHTML = "<b>«Para amamentar é necessária uma rede de apoio forte. Quero que te sintas acompanhada nesta jornada!»</b>";
+            profile.innerHTML = "<img src='../img/team/team-7.jpg' alt='Ana Castro Santos' alt='Ana Castro Santos'>";
+        }
         // Verificar o fragmento da URL e inicializar a página de acordo
         window.addEventListener('load', function () {
             const hash = window.location.hash; // Pega a parte após o "#"
@@ -261,6 +296,28 @@
             else {
                 showA(); // Se não houver hash ou hash desconhecido, exibe Cirurgia por padrão
             }
+        });  
+        // Adicionar funcionalidade dos botões
+        ABtn.addEventListener('click', function () {
+            window.location.hash = "#A"; // Atualiza o URL para "#A" ao clicar no botão Cirurgia
+            showA(); // Exibe a consulta Cirurgia
+        });
+
+        BBtn.addEventListener('click', function () {
+            window.location.hash = "#B"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showB(); // Exibe a consulta pós-parto
+        });
+        CBtn.addEventListener('click', function () {
+            window.location.hash = "#C"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showC(); // Exibe a consulta pós-parto
+        });
+        DBtn.addEventListener('click', function () {
+            window.location.hash = "#D"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showD(); // Exibe a consulta pós-parto
+        });
+        EBtn.addEventListener('click', function () {
+            window.location.hash = "#E"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showE(); // Exibe a consulta pós-parto
         });
     </script>
     <!-- Seção de Rodapé Fim -->
