--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -284,9 +284,9 @@
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="row">
-                        <div class="card shadow">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
-                                <p class="border-bottom">Neste espaço existem consultas em várias áreas,
+                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
                                     tanto
                                     para as pessoas que estão na “preparação para o parto”
                                     como na “recuperação pós parto”. Clique em cada um dos ícones seguintes para saber
@@ -294,19 +294,19 @@
                                 <div class="d-flex">
                                     <div class="col-lg-6 col-md-6 text-center">
                                         <div class="card-icon">
-                                            <img src="../img/icons/pregnant-woman.png" style="width: 150px;">
+                                            <img src="../img/icons/pregnant-woman.png" style="width: 110px;">
                                         </div>
-                                        <div class="card-text">
-                                            <button id="con-pre">Consulta de Amamentação pré-parto</button>
+                                        <div class="text-white card-text">
+                                            <button id="con-pre" class="text-white">Consulta de Amamentação pré-parto</button>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 text-center">
                                         <div class="card-icon">
-                                            <img src="../img/icons/amamentacao.png" style="width: 150px;">
+                                            <img src="../img/icons/mother.png" style="width: 75px;">
 
                                         </div>
-                                        <div class="card-text">
-                                            <button id="con-pos">Consulta de Amamentação Pós-parto</button>
+                                        <div class="text-white card-text ">
+                                            <button id="con-pos" class="text-white">Consulta de Amamentação Pós-parto</button>
                                         </div>
                                     </div>
                                 </div>
