--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -455,12 +455,10 @@
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="row">
-                        <div class="card w-100 shadow">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
-                                <div class="img" id="img"
-                                    style="height: 230px;background-repeat: no-repeat;background-size: cover;background-position: top center;">
-                                </div>
-                                <hr>
+                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas, clique em cada uma das seguintes consultas para saber
+                                    que consultas tem disponíveis.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
                                         <div class="card-text">
